Forge Beta: 07-##-2013 ver 1.4.4


13### cards in total.


-------------
Release Notes
-------------

-Improvements to color/card Type filters
You can now right-click on a color filter button to show only cards of that color, filtering out all other colors. Similar with card type filter buttons.

In addition, fixed bug where middle and right clicking buttons did the same behavior as left clicking, and fixed bug where clicking multiple buttons quickly (such as filters) while moving the mouse around would result in clicks not registering sometimes.


- Card Zoomer -
Now you can gaze at your HQ images in all their glory with just a flick of the mousewheel. This feature will also increase the size of low quality pics up to the size used be the high quality pics, but the image will not be very clear.

Instructions:
- Works on any card image in the Deck Editor or Duel screen.
- Move your mouse over the card you want to zoom and mouse-wheel forward.
- Mouse-wheel back, mouse click or pressing ESC closes the zoomed image.

Limitations:
- Only works with the mouse wheel at the moment.
- Does not show the other side of double-sided cards yet.

WIP:
- Press and hold the CTRL key while mousing over a card to see zoomed image.
- Flipping double-sided card.


- Preferences updates -
All reset buttons now appear under Troubleshooting section. Increased visibility of Troubleshooting section by moving to the top of the preferences screen. Added confirmation dialogs to all reset buttons.

Converted Skins list to themed combo and added to new Visual Themes section. Converted AI Profile list to themed combo and moved to top of GamePlay section. New Visual Themes setting to hide or show background image on match screen. Default show.
